# ExascaleWorkflowSandbox

./: .gitignore  .readthedocs.yaml  COVERAGE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: coverage-check.yaml  docker-slurm.yaml  docker-slurm.yml  docs.yaml  exaworks_centos.yml  exaworks_containers.yml  exaworks_ubuntu.yml  install_exaworks.yml  lint.yaml  mpas-app.yaml  package-cleanup.yaml  parsl_examples.yml  test-suite.yaml
ExaWorks/: Dockerfile-centos7  Dockerfile-spack-base-centos7  Dockerfile-spack-base-ubuntu20  Dockerfile-spack-exaworks  Dockerfile-spack-exaworks-centos7  Dockerfile-spack-exaworks-ubuntu20  Dockerfile-spack-flux  Dockerfile-spack-flux-centos7  Dockerfile-spack-flux-ubuntu20  Dockerfile-spack-parsl  Dockerfile-spack-parsl-centos7  Dockerfile-spack-parsl-ubuntu20  Dockerfile-spack-radical  Dockerfile-spack-radical-centos7  Dockerfile-spack-radical-ubuntu20  Dockerfile-spack-stc  Dockerfile-spack-stc-centos7  Dockerfile-spack-stc-ubuntu20  Dockerfile-ubuntu20
ExaWorks/scripts/: activate_buildcache.sh  install_base.sh  install_bootstrap.sh  install_exaworks.sh  install_exaworks_from_mirror.sh  install_flux.sh  install_parsl.sh  install_radical.sh  install_spack.sh  install_stc.sh  make_buildcache.sh
ExaWorks/test/: parsl_hello.py
JEDI/exascale-workflow-bundle/: CMakeLists.txt
JEDI/qg-bundle/: CMakeLists.txt
JEDI/yaml/: 3dvar.dripcg.yaml  convertstate.yaml  forecast.yaml  make_obs_3d.yaml  qg_experiment.yaml  truth.yaml
apps/mpas/: README.md
apps/mpas/config/: default_config.yaml  resources.yaml  streams.init_atmosphere.IN  user_config.yaml
apps/mpas/data/: conus.graph.info
apps/mpas/parm/: resources.yaml  resources.yml
apps/mpas/parm/machines/: chiltepin.yaml  hercules.yaml
apps/mpas/patches/: src.framework.Makefile.patch
apps/mpas/scripts/: experiment.py  experiment.yml
apps/mpas/ush/: default_config.yaml  experiment.py  user_config.yaml
conda.recipe/: README.md  meta.yaml
docker/: docker-compose-cache.json  docker-compose.yml
docker/frontend/: Dockerfile  docker-entrypoint.sh
docker/install/: chiltepin.yml  conda_init.sh  install.sh  install_base.sh  install_bootstrap.sh  install_flux.sh  install_flux_parsl.sh  install_miniconda.sh  install_parsl.sh  install_spack.sh  jedi_init.sh
docker/master/: Dockerfile
docker/node/: Dockerfile
docker/spack-stack/: .gitignore  Dockerfile  Dockerfile-test  Dockerfile.patch  cc.patch.aarch64  create_dockerfile.sh  get_sso_credentials.sh  mirrors.in.yaml  openmpi.package.py  openmpi.package.py.aarch64  openmpi.package.py.patch.aarch64  openmpi.package.py.patch.x86_64
docker/spack-stack/CodeBuild/: amd64spec.yml
docker/test/: parsl_hello.py  parsl_mpi_flux_hello.py
docker/test/output/: parsl_bash_hello.out.baseline  parsl_flux_mpi_hello_run.out.baseline  parsl_flux_resource_list.txt.baseline
docker/test/src/: hercules.yaml  mpi_hello.f90  parsl_flux_mpi_hello.hercules.py  parsl_flux_mpi_hello.py  parsl_hello.py
docs/: Makefile  api.rst  conf.py  configuration.rst  container.rst  data.rst  endpoints.rst  index.rst  installation.rst  quickstart.rst  requirements.txt  tasks.rst  testing.rst  usage.rst
install/: get_sso_credentials.sh  install.sh  mirrors.in.yaml
install/parallel-works/: bootstrap.sh  build_spack-stack.sh  debug.sh  lmod_reset.sh  mirrors.in.yaml  setup.sh
recipe/: README.md  meta.yaml
resources/: README.md
src/apps/mpas/scripts/: experiment.py
src/apps/mpas/ush/: retrieve_data.py
src/chiltepin/: __init__.py  abstraction.py  bashFunction.py  cli.py  config.py  configure.py  data.py  endpoint.py  retrieve_data.py  rocoto.py  tasks.py  workflow.py
src/chiltepin/config/: factory.py
src/chiltepin/drivers/jedi/qg/: driver.py
src/chiltepin/drivers/metis/: driver.py
src/chiltepin/drivers/mpas/: driver.py
src/chiltepin/drivers/mpas/limited_area/: driver.py
src/chiltepin/drivers/utils/: chiltepin_get_data.py  retrieve_data.py
src/chiltepin/drivers/wps/: driver.py
src/chiltepin/drivers/wrf/: driver.py
src/chiltepin/jedi/: leadtime.py  qg.py
src/chiltepin/jedi/qg/: config.py  forecast.py  hofx.py  install.py  osse.py  remote_workflow.py  variational.py  workflow.py  wrapper.py
src/chiltepin/jedi/qg/config/: forecast.yaml  workflow.yaml
src/chiltepin/metis/: wrapper.py
src/chiltepin/mpas/: wrapper.py
src/chiltepin/mpas/limited_area/: wrapper.py
src/chiltepin/utils/: chiltepin_get_data.py  data_locations.yml  retrieve_data.py
src/chiltepin/wps/: wrapper.py
src/chiltepin/wrf/: wrapper.py
tests/: abstraction.py  chiltepin.yaml  ci.yaml  config.yaml  conftest.py  data_transfer.py  delete-endpoint.py  hera.yaml  hercules.yaml  mpi_hello.f90  mpi_pi.f90  qg.yaml  remove_gc_endpoint.py  test_cli.py  test_configure.py  test_data.py  test_endpoint.py  test_endpoint_mep.py  test_endpoint_uep.py  test_globus_compute_hello.py  test_globus_compute_mep_hello.py  test_globus_compute_mep_mpi.py  test_globus_compute_mpi.py  test_globus_compute_uep_hello.py  test_globus_compute_uep_mpi.py  test_leadtime.py  test_parsl_flux_mpi_hello.py  test_parsl_hello.py  test_parsl_mpi.py  test_parsl_mpi_hello.py  test_qg.py  test_qg_install.py  test_rocoto.py  test_tasks.py  test_transfer.py  test_uwtools.py  test_workflow.py  xfer.py  xfer_test.py
tests/configs/: docker.yaml  hera.yaml  hercules.yaml  ursa.yaml
tests/globus_compute/compute/: config.yaml
tests/globus_compute/mpi/: config.yaml
tests/globus_compute/service/: config.yaml
tests/hercules/: config.yaml  endpoint.json  user_config_template.yaml.j2  user_environment.yaml
tests/output/: parsl_python_hello.out.baseline
tests/templates/: compute.yaml  gc-mpi.yaml  mpi.yaml  service.yaml
