[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chiltepin"
version = "0.0.1"
dependencies = [
  "globus-compute-sdk",
  "globus-compute-endpoint",
  "uwtools @ git+https://github.com/ufs-community/uwtools@v2.5.1#subdirectory=src"
]
requires-python = ">=3.9.0"
authors = [
  {name = "Christopher Harrop", email = "Christopher.W.Harrop@noaa.gov"}
]
maintainers = [
  {name = "Christopher Harrop", email = "Christopher.W.Harrop@noaa.gov"}
]
description = "Federated NWP Workflow Tools"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["federated", "workflow"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]

[project.optional-dependencies]
test = [
    "pytest",
    "ruff",
    "pytest-flake8",
    "pytest-black",
    "pytest-isort",
]

[project.scripts]
chiltepin = "chiltepin.cli:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--ignore=apps",
    "--ignore=tests/jedi-bundle-test",
]

[tool.ruff]
target-version = "py310"
lint.extend-select = ["I"]
