[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chiltepin"
version = "0.0.1"
dependencies = [
  "globus-compute-sdk>=4.5.0",
  "globus-compute-endpoint>=4.5.0",
  "parsl>=2026.1.5",
]
requires-python = ">=3.10.0"
authors = [
  {name = "Christopher Harrop", email = "Christopher.W.Harrop@noaa.gov"}
]
maintainers = [
  {name = "Christopher Harrop", email = "Christopher.W.Harrop@noaa.gov"}
]
description = "Federated NWP Workflow Tools"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["federated", "workflow"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]

[project.optional-dependencies]
test = [
    "pytest",
    "ruff",
]

[project.scripts]
chiltepin = "chiltepin.cli:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--ignore=apps",
    "--ignore=tests/jedi-bundle-test",
]

[tool.ruff]
target-version = "py310"
lint.extend-select = ["I"]
